# mempill

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release-python.yml
benchmarks/longmemeval/: README.md  run_harness.sh
mempill-core/: Cargo.toml  README.md
mempill-core/src/: config.rs  engine_handle.rs  error.rs  lib.rs  noop.rs
mempill-core/src/application/: audit.rs  dto.rs  ingest_claim.rs  mod.rs  query_history.rs  query_memory.rs  query_subject.rs  reconcile.rs  submit_adjudication.rs  sweep_adjudications.rs
mempill-core/src/concurrency/: agent_lock.rs  mod.rs
mempill-core/src/engine/: audit_ledger.rs  firewall.rs  gate.rs  gateway.rs  mod.rs  projection.rs  reconciler.rs  supersession.rs  truth_engine.rs  valid_time_helpers.rs
mempill-core/src/ports/: embedding.rs  extractor.rs  mod.rs  model.rs  oracle.rs  pending_adjudication.rs  persistence.rs
mempill-core/src/testing/: conformance.rs  mod.rs  oracle_conformance.rs
mempill-facade/: Cargo.toml  README.md
mempill-facade/examples/: quickstart.rs  temporal_validity.rs
mempill-facade/src/: date.rs  ergonomic.rs  lib.rs
mempill-mcp/: Cargo.toml  README.md  pyproject.toml
mempill-mcp/src/: lib.rs
mempill-mcp/src/mempill_mcp/: __init__.py  __main__.py  server.py  tools.py
mempill-mcp/tests/: conftest.py  test_granularity_tool.py  test_mcp_agent_id.py  test_mcp_tools.py  test_valid_at_tool.py
mempill-postgres/: Cargo.toml  README.md
mempill-postgres/migrations/: V1__initial_schema.sql  V2__pending_adjudications.sql  V3__add_date_granularity.sql
mempill-postgres/src/: connection.rs  lib.rs  store.rs  txn.rs
mempill-postgres/tests/: postgres_as_of_query.rs  postgres_concurrent.rs  postgres_conformance.rs  postgres_granularity_roundtrip.rs  postgres_oracle_conformance.rs  postgres_oracle_e2e.rs  postgres_pending_store.rs  postgres_pool_config.rs  postgres_query_subject_index_plan.rs  postgres_succession.rs  postgres_ttl_orphan.rs
mempill-postgres/tests/common/: mod.rs
mempill-python/: Cargo.toml  README.md  pyproject.toml
mempill-python/python/mempill/: __init__.py  _mempill.pyi  ergonomic.py  quickstart.py  types.py
mempill-python/src/: display.rs  engine.rs  errors.rs  lib.rs  oracle.rs
mempill-python/tests/: conftest.py  test_audit.py  test_contested.py  test_enum_mapping.py  test_ergonomic.py  test_error_mapping.py  test_granularity.py  test_history.py  test_ingest_query.py  test_oracle.py  test_reconcile.py  test_thread_safety.py  test_valid_at.py
mempill-sqlite/: Cargo.toml  README.md
mempill-sqlite/benches/: README.md  bitemporal_as_of.rs
mempill-sqlite/src/: connection.rs  lib.rs  migrations.rs  store.rs  txn.rs
mempill-sqlite/src/schema/: indexes.sql  v1_initial.sql  v2_pending_adjudications.sql  v3_date_granularity.sql
mempill-sqlite/tests/: acid_allergy_retained.rs  acid_amplification.rs  acid_atomic_commit.rs  acid_b11_contested.rs  acid_b7_coherence.rs  acid_g1_replay.rs  concurrent_writes.rs  diag_claim_level_tx_visibility.rs  granularity_roundtrip.rs  history_qa.rs  oracle_belief_surfacing_qa.rs  oracle_constructor_e2e.rs  oracle_resolution_e2e.rs  oracle_ttl_sweep_qa.rs  query_subject_index_plan.rs  sqlite_conformance.rs  sqlite_oracle_conformance.rs  temporal_succession_qa.rs  temporal_succession_task11.rs
mempill-ts/: Cargo.toml  README.md
mempill-ts/src/: lib.rs
mempill-types/: Cargo.toml  README.md
mempill-types/src/: belief.rs  claim.rs  disposition.rs  edge.rs  identity.rs  ledger.rs  lib.rs  proposal.rs  provenance.rs  time.rs  validity.rs
tasks/4-readme/: TASK_4.md
