[workspace]
members = [
    "mempill-types",
    "mempill-core",
    "mempill-sqlite",
    "mempill-python",
    "mempill-ts",
    "mempill-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
futures = "0.3"
mempill-types = { path = "mempill-types" }
