[package]
name = "mempill-core"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dependencies]
mempill-types = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
