[package]
name = "mempill-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Core engine (bi-temporal claim store, gateway, adjudication gate, oracle loop) for the mempill AI-agent memory system — all 8 deterministic components (C1–C8)"
keywords = ["ai", "agent", "memory", "temporal", "llm"]
categories = ["data-structures", "asynchronous"]

[features]
test-support = []

[dependencies]
mempill-types = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
