[package]
name = "mempill-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Core engine for mempill — a bi-temporal, append-only claim store with a deterministic adjudication gate and oracle resolution for temporally-correct AI-agent memory"
keywords = ["ai", "agent", "memory", "temporal", "llm"]
categories = ["data-structures", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[features]
test-support = []

[dependencies]
mempill-types = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
