[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempill-mcp"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "mempill>=0.2,<1",
    "mcp>=1.9,<2",
]

[project.scripts]
mempill-mcp = "mempill_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mempill_mcp"]
