[package]
name = "mempill-python"
version = "0.2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "_mempill"
# cdylib for the wheel; rlib is included so `cargo test` can link the test harness.
crate-type = ["cdylib", "rlib"]

[features]
# The extension-module feature must be active when building the cdylib wheel,
# but must NOT be active for `cargo test` so the linker can resolve Python symbols.
# maturin activates this feature automatically via pyproject.toml.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py311"] }
pythonize = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "rt", "time", "macros"] }
serde_json = "1"
mempill-core = { path = "../mempill-core" }
mempill-sqlite = { path = "../mempill-sqlite" }
mempill-types = { path = "../mempill-types" }
uuid = { version = "1", features = ["v4"] }
