[package]
name = "mempill-python"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
publish = false

[lib]
name = "_mempill"
# cdylib for the wheel; rlib is included so `cargo test` can link the test harness.
crate-type = ["cdylib", "rlib"]

[features]
# The extension-module feature must be active when building the cdylib wheel,
# but must NOT be active for `cargo test` so the linker can resolve Python symbols.
# maturin activates this feature automatically via pyproject.toml.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py311"] }
pythonize = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "rt", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
mempill-core   = { path = "../mempill-core",   version = "0.3.0" }
mempill-sqlite = { path = "../mempill-sqlite", version = "0.3.0" }
mempill-types  = { path = "../mempill-types",  version = "0.3.0" }
uuid = { version = "1", features = ["v4"] }
