[package]
name = "mempill-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
mempill-types = { path = "../mempill-types" }
mempill-core = { path = "../mempill-core" }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
